--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,31 +1,31 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="../index.html">Chiara Zuanni</a>
+    <a class="navbar-brand" href="/ChiaraZuanni/index.html">Chiara Zuanni</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav d-flex flex-row">
       <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
+        <a class="nav-link" href="/ChiaraZuanni/about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/projects">Projects</a>
+        <a class="nav-link" href="/ChiaraZuanni/projects">Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/publications">Publications</a>
+        <a class="nav-link" href="/ChiaraZuanni/publications">Publications</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/talks">Talks</a>
+        <a class="nav-link" href="/ChiaraZuanni/talks">Talks</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/teaching">Teaching</a>
+        <a class="nav-link" href="/ChiaraZuanni/teaching">Teaching</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/service">Service</a>
+        <a class="nav-link" href="/ChiaraZuanni/service">Service</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/media">Media</a>
+        <a class="nav-link" href="/ChiaraZuanni/media">Media</a>
       </li>
     </ul>
   </div>
