--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -5,7 +5,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav d-flex flex-row">
+    <ul class="navbar-nav d-flex flex-mb-row">
       <li class="nav-item">
         <a class="nav-link" href="/ChiaraZuanni/about">About</a>
       </li>
