--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,25 @@
   <div class="container-fluid pt-3">
     <!-- Section: Social media -->
     <section class="mb-4">
+      
+      <!-- ORCID -->
+      <a
+        class="btn btn-link btn-floating btn-lg text-dark m-1"
+        href="https://orcid.org/0000-0003-4027-0278"
+        role="button"
+        data-mdb-ripple-color="dark"
+        ><i class="fa-brands fa-orcid"></i>
+       </a>
 
+      <!-- Google Scholar -->
+      <a
+        class="btn btn-link btn-floating btn-lg text-dark m-1"
+        href="https://scholar.google.co.uk/citations?user=6ns8KocAAAAJ&hl=en"
+        role="button"
+        data-mdb-ripple-color="dark"
+        ><i class="fa-brands fa-google-scholar"></i>
+       </a>
+      
       <!-- Linkedin -->
       <a
         class="btn btn-link btn-floating btn-lg text-dark m-1"
