--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,13 +4,22 @@
     <!-- Section: Social media -->
     <section class="mb-4">
       
+      <!-- Uni Webpage -->
+           <a
+           class="btn btn-link btn-floating btn-lg text-dark m-1"
+           href="http://bit.ly/uni-profile"
+           role="button"
+           data-mdb-ripple-color="dark"
+           ><i class="fas fa-university"></i
+         ></a>
+
       <!-- ORCID -->
       <a
         class="btn btn-link btn-floating btn-lg text-dark m-1"
         href="https://orcid.org/0000-0003-4027-0278"
         role="button"
         data-mdb-ripple-color="dark"
-        ><i class="fa-brands fa-orcid"></i>
+        ><i class="ai ai-orcid-square ai-3x"></i>
        </a>
 
       <!-- Google Scholar -->
@@ -19,9 +28,18 @@
         href="https://scholar.google.co.uk/citations?user=6ns8KocAAAAJ&hl=en"
         role="button"
         data-mdb-ripple-color="dark"
-        ><i class="fa-brands fa-google-scholar"></i>
+        ><i class="ai ai-google-scholar-square ai-3x"></i>
        </a>
-      
+
+      <!-- Semantic Scholar 
+      <a
+        class="btn btn-link btn-floating btn-lg text-dark m-1"
+        href="https://www.semanticscholar.org/author/Chiara-Zuanni/72876412"
+        role="button"
+        data-mdb-ripple-color="dark"
+        ><i class="ai ai-semantic-scholar-square ai-3x"></i>
+       </a>
+      -->
       <!-- Linkedin -->
       <a
         class="btn btn-link btn-floating btn-lg text-dark m-1"
@@ -31,16 +49,7 @@
         ><i class="fab fa-linkedin"></i
       ></a>
 
-     <!-- Uni Webpage -->
-           <a
-           class="btn btn-link btn-floating btn-lg text-dark m-1"
-           href="http://bit.ly/uni-profile"
-           role="button"
-           data-mdb-ripple-color="dark"
-           ><i class="fas fa-university"></i
-         ></a>
-
-    <!-- email -->
+     <!-- email -->
       <a
       class="btn btn-link btn-floating btn-lg text-dark m-1"
       href="mailto:chiara.zuanni@uni-graz.at"
