--- a/layouts/About/single.html
+++ b/layouts/About/single.html
@@ -9,6 +9,10 @@
           <h5>Associate professor in digital humanities</h5>
           <p>2024 - Present, <em>University of Graz, Austria</em></p>
         </div>
+          <div class="resume-item">
+            <h5>Habilitation in digital humanities</h5>
+            <p>2024<em>University of Graz, Austria</em></p>
+          </div>
         <div class="resume-item">
             <h5>Assistant professor in digital humanities</h5>
             <p>2018 - 2024, <em>University of Graz, Austria</em></p>
