--- a/layouts/About/single.html
+++ b/layouts/About/single.html
@@ -11,7 +11,7 @@
         </div>
           <div class="resume-item">
             <h5>Habilitation in digital humanities</h5>
-            <p>2024<em>University of Graz, Austria</em></p>
+            <p>2024, <em>University of Graz, Austria</em></p>
           </div>
         <div class="resume-item">
             <h5>Assistant professor in digital humanities</h5>
