--- a/layouts/Teaching/list.html
+++ b/layouts/Teaching/list.html
@@ -40,7 +40,7 @@
               {{ end }}
 -->      
       <h3>Supervision and examiner roles</h3>
-              {{ range .Site.Taxonomies.levels.phd }}
+              {{ range .Site.Taxonomies.statuses.supervision.levels.phd }}
                 <ul class="listing">
                   <li class="listing-post">
                     <b>{{ .Title }}</b></li>        
